app/docs/data/docs/reference/3.1/Doctrine/Orm/State/Options/page.mdx
---
type: Class
---

# [ApiPlatform\Doctrine\Orm\State\Options](/docs/v3.1/reference/Doctrine/Orm/State/Options)



```php
class ApiPlatform\Doctrine\Orm\State\Options implements `<a href="/docs/v3.1/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>`
{
    public __construct(null|string $entityClass)
    public getEntityClass(): string
    public withEntityClass(null|string $entityClass): `<a href="/docs/v3.1/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
}
```
## Properties
### entityClass

```php
string $entityClass
```



## Methods

### __construct



```php
public __construct(null|string $entityClass)
```

#### Parameters

<table><tbody>
<tr><td>entityClass</td><td>string</td><td></td></tr>
</tbody>
</table>

### getEntityClass



```php
public getEntityClass(): string
```

#### Returns

string

### withEntityClass



```php
public withEntityClass(null|string $entityClass): `<a href="/docs/v3.1/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
```

#### Parameters

<table><tbody>
<tr><td>entityClass</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

`<a href="/docs/v3.1/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
