app/docs/data/docs/reference/3.2/Doctrine/Orm/State/Options/page.mdx
---
type: Class
---

# [ApiPlatform\Doctrine\Orm\State\Options](/docs/v3.2/reference/Doctrine/Orm/State/Options)



```php
class ApiPlatform\Doctrine\Orm\State\Options implements `<a href="/docs/v3.2/reference/State/OptionsInterface">ApiPlatform\State\OptionsInterface</a>`
{
    public __construct(null|string $entityClass, null|string|callable $handleLinks)
    public getEntityClass(): string
    public withEntityClass(null|string $entityClass): `<a href="/docs/v3.2/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
    public getHandleLinks()
    public withHandleLinks($handleLinks): `<a href="/docs/v3.2/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
}
```
## Properties
### entityClass

```php
string $entityClass
```



### handleLinks

```php
$handleLinks
```



## Methods

### __construct



```php
public __construct(null|string $entityClass, null|string|callable $handleLinks)
```

#### Parameters

<table><tbody>
<tr><td>entityClass</td><td>string</td><td></td></tr><tr><td>handleLinks</td><td>string<br />callable</td><td>experimental callable, typed mixed as we may want a service name in the future</td></tr>
</tbody>
</table>

#### See also
- [\ApiPlatform\Doctrine\Orm\State\LinksHandlerInterface](\ApiPlatform\Doctrine\Orm\State\LinksHandlerInterface)


### getEntityClass



```php
public getEntityClass(): string
```

#### Returns

string

### withEntityClass



```php
public withEntityClass(null|string $entityClass): `<a href="/docs/v3.2/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
```

#### Parameters

<table><tbody>
<tr><td>entityClass</td><td>string</td><td></td></tr>
</tbody>
</table>

#### Returns

`<a href="/docs/v3.2/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`

### getHandleLinks



```php
public getHandleLinks()
```

#### Returns



### withHandleLinks



```php
public withHandleLinks($handleLinks): `<a href="/docs/v3.2/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
```

#### Parameters

<table><tbody>
<tr><td>handleLinks</td><td></td><td></td></tr>
</tbody>
</table>

#### Returns

`<a href="/docs/v3.2/reference/Doctrine/Orm/State/Options">ApiPlatform\Doctrine\Orm\State\Options</a>`
